# multi-index-rag-agent

./: .gitignore  README.md  graph_20260321_181421.mmd  graph_20260322_150417.mmd  main.py  pyproject.toml
assets/NETFLIX/: prompt.yaml
assets/OWASP/: prompt.yaml
src/: base_embedding_handler.py  config.py  main.py
src/ingestion/: __init__.py  chunker.py  file_ingestion_handler.py  vectorstore_handler.py
src/reasoning/: graph.py  prompts.py
src/retrieval/: __init__.py  retrieval_handler.py
