[project]
name = "multi-index-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.3.1,<15.0.0",
    "langchain>=1.2.7,<2.0.0",
    "langchain-community>=0.4.1,<0.5.0",
    "langgraph>=1.0.7,<2.0.0",
    "langchain-text-splitters>=1.1.0,<2.0.0",
    "docling>=2.70.0,<3.0.0",
    "faiss-cpu>=1.13.2,<2.0.0",
    "sentence-transformers>=5.2.2,<6.0.0",
    "langchain-huggingface>=1.2.0,<2.0.0",
    "langchain-anthropic==1.3.5",
    "toon-format>=0.9.0b1,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
